Stop flickering of items hidden by jQuery

--- a/css/scss/navigation.scss
+++ b/css/scss/navigation.scss
@@ -363,3 +363,9 @@ body.home.logo-on.fixed-slider #content {
         padding-top: 0;
     }
 }
+
+/* Menu Icons */
+
+.navbar-nav{
+    display: none;
+}
